--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=nogit"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"/>
   <title>Assessment - Calculator</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
@@ -10,32 +10,31 @@
   <div class="calculator">
     <div class="display" id="display">0</div>
     <div class="buttons">
-    <button class="btn">1</button>
-    <button class="btn">2</button>
-    <button class="btn">3</button>
-    <button class="btn clear">C</button>
+      <button class="btn">1</button>
+      <button class="btn">2</button>
+      <button class="btn">3</button>
+      <button class="btn operator">×</button>
+      <button class="btn operator">÷</button>
 
-    <button class="btn">4</button>
-    <button class="btn">5</button>
-    <button class="btn">6</button>
-    <button class="btn operator">×</button>
+      <button class="btn">4</button>
+      <button class="btn">5</button>
+      <button class="btn">6</button>
+      <button class="btn operator">+</button>
+      <button class="btn operator">-</button>
 
-    <button class="btn">7</button>
-    <button class="btn">8</button>
-    <button class="btn">9</button>
-    <button class="btn operator">÷</button>
+      <button class="btn">7</button>
+      <button class="btn">8</button>
+      <button class="btn">9</button>
+      <button class="btn operator">%</button>
+      <button class="btn operator">^</button>
 
-    <button class="btn">.</button>
-    <button class="btn">0</button>
-    <button class="btn backspace"></button>
-    <button class="btn operator">+</button>
-
-    <button class="btn operator">%</button>
-    <button class="btn operator">^</button>
-    <button class="btn operator">-</button>
-    <button class="btn equal">=</button>
+      <button class="btn">.</button>
+      <button class="btn">0</button>
+      <button class="btn clear">C</button>
+      <button class="btn backspace">⌫</button>
+      <button class="btn equal">=</button>
+    </div>
   </div>
-</div>
 
   <script src="script.js"></script>
 </body>
