--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <button class="btn">.</button>
       <button class="btn">0</button>
       <button class="btn clear">C</button>
-      <button class="btn backspace">⌫</button>
+      <button class="btn backspace"></button>
       <button class="btn equal">=</button>
     </div>
   </div>
